yaml/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: whoami-tls-ing
    namespace: whoami
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
  - hosts:
      - whoami-ing.ebdemos.info
    secretName: self-tls
  rules:
  - host: whoami-ing.ebdemos.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc-clusip
            port:
              number: 80
